# PrefectGCP

./: .gitignore  .pre-commit-config.yaml  README.md  deployment.py  gcloud.sh  pyproject.toml  requirements.txt
.github/workflows/: prefect-deployment.yml  python-app.yml
nbs/: benchmark.ipynb  french_fama.ipynb  notebook.ipynb
src/: benchmark.py  curves.py  french_fama.py  funds.py
tests/: test_curves.py
